--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -18,6 +18,8 @@
         <strong>CONTENT</strong>
       </div>
         <%= f.text_area :content, size:"5x5", :class => "form-control", :required => true %>
+        <%= f.hidden_field :post_id, value: @comment.post.id %>
+        <%= f.hidden_field :user_id, value: current_user.id %>
       </div>
 
     <div class="actions">
