--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,23 +11,24 @@
 		  </div>
 		</div>
 
+<%= link_to "Edit", edit_post_path(@post) %>  | 
+<%= link_to "Delete", post_path, method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
+
 <hr>
 
 <h3>Comments</h3>
 
-<% if @post.comments.length > 0 %>
+<% if @comments.length > 0 %>
 	<% @comments.each do |comment| %>
-		<ul>
-			<li><%= comment.content %></li>
-		</ul>
+		
+			<div class="panel panel-body"><%= comment.content %></div>
+		
 	<% end %>
 	<%= render :partial => '/comments/form', :comment => @post.comments.new %>
 <% else %>
 	<%= render :partial => '/comments/form', :placeholder => "Be the first one to comment", :comment => @post.comments.new %>
-<% end %>
+<% end %><br>
 
-<%= link_to "Back", posts_path %>  | 
-<%= link_to "Edit", edit_post_path(@post) %>  | 
-<%= link_to "Delete", post_path, method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
+<%= link_to "Back", posts_path %> 
 </div>
 
