--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -29,17 +29,17 @@
 
   <div class="field">
   <%= f.label :about %><br>
-  <%= f.password_field :about %>
+  <%= f.text_field :about %>
   </div>
 
   <div class="field">
   <%= f.label :fact %><br>
-  <%= f.password_field :fact %>
+  <%= f.text_field :fact %>
   </div>
 
   <div class="field">
   <%= f.label :places %><br>
-  <%= f.password_field :places %>
+  <%= f.text_field :places %>
   </div>
 
   <div class="field">
