--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,20 +6,62 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="container-fluid">
+<% if current_user %>
+  <nav class="navbar navbar navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <span><a class="navbar-brand" href="#">
+          <%= link_to image_tag("anchor.png", :size => "40x40"), trips_path %>
+        </a></span>
 
-<p>
-  <% if current_user %>
+        <button type="button" class="navbar-toggle collapsed pull-right" >
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <a href="/posts/new"><span class="glyphicon glyphicon-pencil"></span></a>
+       </button>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">        
+          <li><%= link_to "New Post", new_post_path %></li>
+          <li><%= link_to "Crew", users_path %></li> 
+          <li class="dropdown pull-right">
+            <a href="#" data-toggle="dropdown" class="dropdown-toggle"><%= "Hi, #{current_user.name}"%> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+                <li><%= link_to "Profile", user_path(current_user) %></li>
+                <li class="divider"></li>
+                <li><%= link_to 'Log Out', session_path('dummy'), method: :delete %></li>
+            </ul>
+           </li>
+        </ul>
+      </div>
+        <!-- /.navbar-collapse -->
+    </div>
+   </nav>
+    <hr>
     Welcome, <%= current_user.name %>
     &nbsp;&nbsp;|&nbsp;&nbsp;
     <%= link_to 'Log Out', session_path('dummy'), method: :delete %>
   <% else %>
-    <%= link_to 'Log In', login_path %>
-    &nbsp;&nbsp;|&nbsp;&nbsp;
-    <%= link_to 'Sign Up', new_user_path %>
+    <div class="navbar navbar-toggle pull-right">
+      <button type="button" class="navbar-toggle collapsed pull-right" >
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">  
+        <li><%= link_to 'Log In', login_path %></li>
+        <li><%= link_to 'Sign Up', new_user_path %></li>
+      </ul>
+    </div>
+    <hr>
   <% end %>
-</p>
 
 <%= yield %>
 
