--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<p class="notice"><%= notice  %></p>
+
 <h1>Your Profile</h1>
 
   <%= image_tag @user.image.url, :class => 'img-responsive img-size' %>
@@ -6,4 +8,7 @@
   <p>Fun Fact About You: <strong><%= @user.fact %></strong></p>
   <p>Places You've Been To: <strong><%= @user.places %></strong></p>
 
-
+<% if @user == current_user %>
+	<%= link_to "Edit Your Profile", edit_user_path(@user) %> | 
+<% end %>
+<%= link_to "Back", users_path %>
