fixed app structure and basic functionality

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,9 @@
 
 
     <% @posts.each do |post| %>
+    <% if post.image.exists? %>
+    	<%= image_tag post.image.url, :class => 'img-responsive img-size' %>
+    <% end %>
 		<div class="panel panel-info">
 		  <div class="panel-heading">
 		    <div class="panel-title pull-left"><strong>@<%= link_to "#{post.handle}", post_path(post) %></strong></div>
