--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,5 +4,5 @@
 
 	<%= render 'form' %>
 
-	<div class="link"><%= link_to 'Back', posts_path %></div>
+	<div class="link"><%= link_to 'Back', trip_posts_path %></div>
 </div>
