--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
-  <%= form_for [@post, @comment] do |f| %>
-    <% if @comment.errors.any? %>
+  <%= form_for [@trip, @announcement] do |f| %>
+    <% if @announcement.errors.any? %>
       <div id="error_explanation">
-        <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
+        <h2><%= pluralize(@announcement.errors.count, "error") %> prohibited this announcement from being saved:</h2>
 
         <ul>
-        <% @comment.errors.full_messages.each do |message| %>
+        <% @announcement.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
         </ul>
@@ -18,6 +18,7 @@
         <strong>CONTENT</strong>
       </div>
       <%= f.text_area :content, size:"5x5", :class => "form-control", :required => true %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
     </div>
 
     <div class="actions">
