--- a/app/views/announcements/edit.html.erb
+++ b/app/views/announcements/edit.html.erb
@@ -1,9 +1,10 @@
-<h1>Edit Your Post</h1>
+<h1>Edit Your Announcement</h1>
 
 <div class="container">
 	<%= render 'form' %>
 
 	<div class="link">
+	<%= link_to 'Show', @announcement %> |
 	<%= link_to 'Back', :back %>
 	</div>
 </div>
