--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,18 @@
   <%= csrf_meta_tags %>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- fonts -->
 </head>
 <body class="container-fluid">
 <% if current_user %>
   <nav class="navbar navbar navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+
+      <div class="navbar-header page-scroll">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+        </button>
         <span><a class="navbar-brand" href="#">
           <%= link_to image_tag("anchor.png", :size => "40x40"), trips_path %>
         </a></span>
@@ -23,28 +28,32 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-          <a href="/posts/new"><span class="glyphicon glyphicon-pencil"></span></a>
-       </button>
+          <span class="icon-bar"></span>
+          <!-- <a href="/posts/new"><span class="glyphicon glyphicon-pencil"></span></a> -->
+        </button>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">        
-          <li><%= link_to "New Post", new_post_path %></li>
+        <ul class="nav navbar-nav navbar-right">      
+          <% if @trip && @trip.id %> 
+            <li><%= link_to "New Announcement", new_trip_announcement_path(@trip) %></li>
+            <li><%= link_to "New Post", new_trip_post_path(@trip) %></li>
+          <% end %>
           <li><%= link_to "Crew", users_path %></li> 
-          <li class="dropdown pull-right">
+          <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="dropdown-toggle"><%= "Hi, #{current_user.name}"%> <b class="caret"></b></a>
             <ul class="dropdown-menu">
-                <li><%= link_to "Profile", user_path(current_user) %></li>
-                <li class="divider"></li>
-                <li><%= link_to 'Log Out', session_path('dummy'), method: :delete %></li>
+              <li><%= link_to "Profile", user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li><%= link_to 'Log Out', session_path('dummy'), method: :delete %></li>
             </ul>
-           </li>
+          </li>
         </ul>
       </div>
         <!-- /.navbar-collapse -->
     </div>
    </nav>
     <hr>
-    Welcome, <%= current_user.name %>
+<!--     Welcome, <%= current_user.name %> -->
     &nbsp;&nbsp;|&nbsp;&nbsp;
     <%= link_to 'Log Out', session_path('dummy'), method: :delete %>
   <% else %>
