--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_for(@post) do |f| %>
+  <%= form_for [@trip, @post] do |f| %>
     <% if @post.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -14,10 +14,6 @@
 
 
     <div class="panel panel-info">
-      <div class="panel-heading">
-        <strong>HANDLE</strong>
-      </div>
-        <%= f.text_field :handle, :class => "form-control", :required=> true %>
       <div class="panel-heading">
         <strong>CONTENT</strong>
       </div>
