--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,12 @@
 <div class="container"
 <p id="notice"><%= notice %></p>
 
-		<% if @post.image.url.empty? %>
+		<% if @post.image.exists? %>
 			<%= image_tag @post.image.url, :class => 'img-responsive img-size' %>
 		<% end %>
 		<div class="panel panel-info">
 		<div class="panel-heading">
-		  <div class="panel-title pull-left"><strong>@<%= @post.handle %></strong></div>
+			<div class="panel-title pull-left"><strong><%= @post.user.name %></strong></div>
 		  <div class="panel-title pull-right"><%= @post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
 		</div>
 		  <div class="panel-body">
@@ -21,17 +21,22 @@
 
 <h3>Comments</h3>
 
-<% if @comments.length > 0 %>
-	<% @comments.each do |comment| %>
-		
-			<div class="panel panel-body"><%= comment.content %></div>
+<% if @post.comments.length > 0 %>
+	<% @post.comments.each do |comment| %>
+
+		<div class="panel-heading">
+			<div class="panel-body pull-left"><%= link_to "#{comment.user.name}", edit_comment_path(comment) %>: <%= comment.content %></div>
+			<div class="panel-body pull-right">
+				<%= link_to "Edit", edit_comment_path(comment)%> |
+				<%= link_to "Delete", comment_path(comment),  method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}%></div>
+		</div><br>
 		
 	<% end %>
-	<%= render :partial => '/comments/form', :comment => @post.comments.new %>
+	<%= render '/comments/form' %>
 <% else %>
-	<%= render :partial => '/comments/form', :placeholder => "Be the first one to comment", :comment => @post.comments.new %>
+	<%= render '/comments/form', :placeholder => "Be the first one to comment" %>
 <% end %><br>
 
-<%= link_to "Back", posts_path %> 
+<%= link_to "Back", trip_path(@post.trip) %> 
 </div>
 
