--- a/app/views/trips/all.html.erb
+++ b/app/views/trips/all.html.erb
@@ -1,3 +1,35 @@
-<h1>All trips will be here</h1>
+<p id="notice"><%= notice %></p>
+<section id="portfolio" class="bg-light-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">MORE Trips</h2>
+                <h3 class="section-subheading text-muted">The upcoming trips.</h3><br>
+            </div>
+        </div>
+        <div class="row">
+        <% @trips.each do |trip| %>
+           <div class="col-md-4 col-sm-6 portfolio-item">
+               <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                   <div class="portfolio-hover">
+                       <div class="portfolio-hover-content">
+                           <i class="fa fa-plus fa-3x"></i>
+                       </div>
+                   </div>
+                   <%= link_to image_tag("picasso.jpg", :size => "40x40", :class => 'img-responsive img-size') %>
 
-<p>Display trips as thumbnails + description(hover over?)</p>
+               </a>
+               <div class="portfolio-caption">
+                   <h4><%= link_to trip.place, trip_path(trip)%></h4>
+                   <p class="text-muted"><%= trip.startdate.strftime('%d %b') %> - <%= trip.enddate.strftime('%d %b %Y') %></p>
+
+                   <p class="text-muted"><%= trip.about %></p>
+               </div>
+           </div>
+         <% end %>
+       </div>
+     </div>
+   </section>
+
+<%= link_to "Create New Trip", new_trip_path %>
+
