--- a/app/views/trips/all.html.erb
+++ b/app/views/trips/all.html.erb
@@ -16,7 +16,7 @@
                            <i class="fa fa-plus fa-3x"></i>
                        </div>
                    </div>
-                   <%= link_to image_tag("picasso.jpg", :size => "40x40", :class => 'img-responsive img-size') %>
+                   <%= link_to image_tag("#{trip.image}", :size => "60x60", :class => 'img-responsive img-size') %>
 
                </a>
                <div class="portfolio-caption">
