--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,4 +1,5 @@
 <div class="jumbotron container">
+<!-- 	<div class="jm-background image-responsive"><%= link_to image_tag "#{@trip.image}" %></div>-->
 	<h1><%= @trip.place.upcase %></h1>
 	<p><%= @trip.startdate.strftime('%d %b') %> - <%= @trip.enddate.strftime('%d %b %Y') %></p><br>
 	<p><%= @trip.about %></p><br>
