--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -46,5 +46,5 @@
   <%= f.file_field :image %><br><br>
   </div>
 
-  <div class="actions"><%= f.submit %></div>
+  <div class="actions"><%= f.submit  "Create Profile", class: "btn btn-default"%></div>
 <% end %>
