--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -20,8 +20,11 @@
       <%= f.text_area :content, size:"5x5", :class => "form-control", :required => true %>
     </div>
 
-    <div class="actions">
-      <%= f.submit %>
-    </div>
+    <% if @comment.id %>
+      <div class="actions"><%= f.submit  "Update Comment", class: "btn btn-default"%></div>
+    <% else %>
+      <div class="actions"><%= f.submit  "Add Comment", class: "btn btn-default"%></div>
+    <% end %><br>
+
   <% end %>
 </div>
