--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
         <button type="button" class="navbar-toggle collapsed pull-right" >
           <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>s
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -37,8 +37,8 @@
           <% if @trip && @trip.id %> 
             <li><%= link_to "New Announcement", new_trip_announcement_path(@trip) %></li>
             <li><%= link_to "New Post", new_trip_post_path(@trip) %></li>
+            <li><%= link_to "Crew", crew_path(@trip) %></li> 
           <% end %>
-          <li><%= link_to "Crew", users_path %></li> 
           <li class="dropdown">
             <a href="#" data-toggle="dropdown" class="dropdown-toggle"><%= "Hi, #{current_user.name}"%> <b class="caret"></b></a>
             <ul class="dropdown-menu">
