--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -4,6 +4,7 @@
   <%= render 'form' %>
 
   <div class="link"><br>
-  <%= link_to 'Back', trips_path %>
+  <%= link_to 'Back', trips_path %> | 
+	<%= link_to "Delete Trip", trip_path(@trip), method: :delete, data: { confirm: "Are you sure you want to delete this trip?"} %>
   </div>
 </div>
