--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,71 @@
 <p class="notice"><%= notice  %></p>
 
-<h1>Your Profile</h1>
+<div class="container">
+  <%= image_tag @user.image.url, :class => 'img-responsive profile' %>
+  <h1><strong><%= @user.name %></strong></h1>
+  <p>
+  	About You : <strong><%= @user.about %></strong><br>
+ 		Fun Fact About You: <strong><%= @user.fact %></strong><br>
+  	Places You've Been To: <strong><%= @user.places %></strong>
+	</p>
 
-  <%= image_tag @user.image.url, :class => 'img-responsive img-size' %>
-  <p>Name: <strong><%= @user.name %></strong></p>
-  <p>About You : <strong><%= @user.about %></strong></p>
-  <p>Fun Fact About You: <strong><%= @user.fact %></strong></p>
-  <p>Places You've Been To: <strong><%= @user.places %></strong></p>
+	<% if @user == current_user %>
+		<%= link_to "Edit Your Profile", edit_user_path(@user) %> | 
+	<% end %>
+	<%= link_to "Back", :back %>
+	<hr>
 
-<% if @user == current_user %>
-	<%= link_to "Edit Your Profile", edit_user_path(@user) %> | 
-<% end %>
-<%= link_to "Back", users_path %>
+	<h3><%= @user.name%>'s Trips</h3>
+
+	<% @user.invited_trips.each do |trip| %>
+    <div class="col-md-4 col-sm-6 portfolio-item">
+      <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+        <div class="portfolio-hover">
+          <div class="portfolio-hover-content">
+            <i class="fa fa-plus fa-3x"></i>
+          </div>
+        </div>
+          <%= link_to image_tag("#{trip.image}", :size => "40x40", :class => "img-responsive img-size") %>
+      </a>
+      <div class="portfolio-caption">
+	      <h4><%= link_to trip.place, trip_path(trip)%></h4>
+	      <p class="text-muted"><%= trip.startdate.strftime('%d %b') %> - <%= trip.enddate.strftime('%d %b %Y') %></p>
+
+	      <p class="text-muted"><%= trip.about %></p>
+      </div>
+  	</div>
+  <% end %>
+
+  <hr>
+
+	
+
+	<h3 class="row"><%= @user.name%>'s Recent Posts</h3>
+
+	<% if @user.posts.empty? %>
+		<p>This user currently has no posts</p>
+	<% else %>
+		<% @user.posts.order(:trip_id).each do |post| %>
+			<% if post.image.exists? %>
+				<%= image_tag post.image.url, :class => 'img-responsive img-size' %>
+			<% end %>
+			<div class="panel panel-info">
+			  <div class="panel-heading">
+			  	<div class="panel-title pull-left"><strong>Trip: <%= post.trip.place %></strong></div>
+					<div class="panel-title pull-right"><%= post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
+				</div>
+				<div class="panel-body">
+				<%= post.content %>
+				</div>
+			</div>
+		<% end %>
+	<% end %><br>
+
+
+
+		
+
+</div>
+
+		
+
