--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,18 +7,21 @@
 
 
     <% @posts.each do |post| %>
-    <% if post.image.exists? %>
-    	<%= image_tag post.image.url, :class => 'img-responsive img-size' %>
-    <% end %>
-		<div class="panel panel-info">
-		  <div class="panel-heading">
-		    <div class="panel-title pull-left"><strong>@<%= link_to "#{post.handle}", post_path(post) %></strong></div>
-		    <div class="panel-title pull-right"><%= post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
-		  </div>
-		  <div class="panel-body">
-		    <%= post.content %>
-		  </div>
-		</div>
+	    <% if post.image.exists? %>
+	    	<%= image_tag post.image.url, :class => 'img-responsive img-size' %>
+	    <% end %>
+			<div class="panel panel-info">
+			  <div class="panel-heading">
+			    <div class="panel-title pull-left"><strong>@<%= link_to "#{post.handle}", post_path(post) %></strong></div>
+			    <div class="panel-title pull-right"><%= post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
+			  </div>
+			  <div class="panel-body">
+			    <%= post.content %>
+			  </div>
+			  <div_for post do %>
+			  	<%= render partial: "likes/like", locals: { post: post } %>
+			  <% end %>
+			</div>
     <% end %>
 
 </div>
