--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,38 +5,47 @@
 			<%= image_tag @post.image.url, :class => 'img-responsive img-size' %>
 		<% end %>
 		<div class="panel panel-info">
-		<div class="panel-heading">
-			<div class="panel-title pull-left"><strong><%= @post.user.name %></strong></div>
-		  <div class="panel-title pull-right"><%= @post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
-		</div>
+			<div class="panel-heading">
+				<div class="panel-title pull-left"><strong><%= @post.user.name %></strong></div>
+			  <div class="panel-title pull-left"><%= @post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
+			</div>
 		  <div class="panel-body">
 		    <%= @post.content %>
 		  </div>
+		  <div class="panel-footer">
+				<span> <%= @post.likes.count %> users liked this post</span>&nbsp;&nbsp;&nbsp;
+		  	<% if current_user.like?(@post.id) %>
+					<%= link_to "", unlike_path(@post), class: "glyphicon glyphicon-thumbs-down" %>  
+				<% else %>
+					<%= link_to "", like_path(@post), class: "glyphicon glyphicon-thumbs-up" %>  
+				<% end %>
+		  </div>
 		</div>
 
-<%= link_to "Edit", edit_post_path(@post) %>  | 
-<%= link_to "Delete", post_path, method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
+	<%= link_to "Edit", edit_post_path(@post) %>  | 
+	<%= link_to "Delete", post_path, method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
 
-<hr>
 
-<h3>Comments</h3>
+	<hr>
 
-<% if @post.comments.length > 0 %>
-	<% @post.comments.each do |comment| %>
+	<h3>Comments</h3>
 
-		<div class="panel-heading">
-			<div class="panel-body pull-left"><%= link_to "#{comment.user.name}", edit_comment_path(comment) %>: <%= comment.content %></div>
-			<div class="panel-body pull-right">
-				<%= link_to "Edit", edit_comment_path(comment)%> |
-				<%= link_to "Delete", comment_path(comment),  method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}%></div>
-		</div><br>
-		
-	<% end %>
-	<%= render '/comments/form' %>
-<% else %>
-	<%= render '/comments/form', :placeholder => "Be the first one to comment" %>
-<% end %><br>
+	<% if @post.comments.length > 0 %>
+		<% @post.comments.each do |comment| %>
+			<div class="panel-heading">
+				<div class="panel-body pull-left"><%= link_to "#{comment.user.name}", edit_comment_path(comment) %>: <%= comment.content %></div>
+				<div class="panel-body pull-right">
+					<%= link_to "Edit", edit_comment_path(comment)%> |
+					<%= link_to "Delete", comment_path(comment),  method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}%>
+				</div>
+			</div><br>
+			
+		<% end %>
+		<%= render '/comments/form' %>
+	<% else %>
+		<%= render '/comments/form', :placeholder => "Be the first one to comment" %>
+	<% end %><br>
 
-<%= link_to "Back", trip_path(@post.trip) %> 
+	<%= link_to "Back", trip_path(@post.trip) %> 
 </div>
 
