--- a/app/views/trips/all.html.erb
+++ b/app/views/trips/all.html.erb
@@ -3,8 +3,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">MORE Trips</h2>
-                <h3 class="section-subheading text-muted">The upcoming trips.</h3><br>
+                <h2 class="section-heading">MORE Travel</h2>
+                <h3 class="section-subheading text-muted">Showing you the world one trip at a time.</h3><br>
             </div>
         </div>
         <div class="row">
