--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Your Trips</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h3 class="section-subheading text-muted">I'm going on adventure!.</h3>
             </div>
         </div>
         <div class="row">
