--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Sign Up</h1>
+<h2>THE ART OF TRAVELLING</h2>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -11,35 +12,28 @@
     </div>
   <% end %>
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :required => true, placeholder: "Name" %><br>
   </div>
   <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :required => true, placeholder: "Email" %>
   </div>
   <div class="field">
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, :required => true, placeholder: "Password" %>
   </div>
   <div class="field">
-    <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, :required => true, placeholder: "Confirm Password" %>
   </div>
 
   <div class="field">
-  <%= f.label :about %><br>
-  <%= f.text_field :about %>
+  <%= f.text_area :about, placeholder: "Tell us about yourself" %>
   </div>
 
   <div class="field">
-  <%= f.label :fact %><br>
-  <%= f.text_field :fact %>
+  <%= f.text_area :fact, placeholder: "Any fun facts you would like to share?" %>
   </div>
 
   <div class="field">
-  <%= f.label :places %><br>
-  <%= f.text_field :places %>
+  <%= f.text_area :places, placeholder: "Share with others places you've travelled to" %>
   </div>
 
   <div class="field">
