--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,17 +7,24 @@
 
 
     <% @posts.each do |post| %>
-	    <% if post.image.exists? %>
-	    	<%= image_tag post.image.url, :class => 'img-responsive img-size' %>
-	    <% end %>
 			<div class="panel panel-info">
 			  <div class="panel-heading">
 			    <div class="panel-title pull-left"><strong>@<%= link_to "#{post.handle}", post_path(post) %></strong></div>
 			    <div class="panel-title pull-right"><%= post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
 			  </div>
 			  <div class="panel-body">
-			    <%= post.content %>
+			    <% if post.image.exists? %>
+					  <div class="post-image-show pull-left col-md-6">
+				    	<%= image_tag post.image.url, :class => 'img-responsive img-size' %>
+			    	</div>
+  					<div class="post-content pull-right col-md-6">
+  						<%= post.content %>
+  					</div>
+  				<% else %>
+  		    	<%= post.content %>
+  	    	<% end %>
 			  </div>
+
 			  <div_for post do %>
 			  	<%= render partial: "likes/like", locals: { post: post } %>
 			  <% end %>
@@ -26,4 +33,4 @@
 
 </div>
 
-<%= link_to "Create Post", new_post_path %>
+<%= link_to "Create Post", new_post_path %><br><br>
