--- a/app/views/trips/all.html.erb
+++ b/app/views/trips/all.html.erb
@@ -1,37 +1,39 @@
-<p id="notice"><%= notice %></p>
-<section id="portfolio" class="bg-light-gray">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">MORE Travel</h2>
-                <h3 class="section-subheading text-muted">Showing you the world one trip at a time.</h3><br>
-            </div>
-        </div>
-        <div class="row">
-        <% @trips.each do |trip| %>
-           <div class="col-lg-4 col-sm-6 portfolio-item">
-               <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                   <div class="portfolio-hover">
-                       <div class="portfolio-hover-content">
-                           <i class="fa fa-plus fa-3x"></i>
-                       </div>
-                   </div>
-                   <div class="trip-image">
-                    <%= link_to image_tag("#{trip.image}", :size => "40x40", :class => 'img-responsive img-size') %>
-                   </div>
+<div class="container-fluid">
+  <p id="notice"><%= notice %></p>
+  <section id="portfolio" class="bg-light-gray">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12 text-center">
+                  <h2 class="section-heading">MORE TRAVEL</h2>
+                  <h3 class="section-subheading text-muted">Showing you the world one trip at a time.</h3><br><br>
+              </div>
+          </div>
+          <div class="row">
+          <% @trips.each do |trip| %>
+             <div class="col-lg-4 col-sm-6 portfolio-item">
+                 <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                     <div class="portfolio-hover">
+                         <div class="portfolio-hover-content">
+                             <i class="fa fa-plus fa-3x"></i>
+                         </div>
+                     </div>
+                     <div class="trip-image">
+                      <%= link_to image_tag("#{trip.image}", :size => "40x40", :class => 'img-responsive img-size') %>
+                     </div>
 
-               </a>
-               <div class="portfolio-caption">
-                   <h4><%= link_to trip.place, trip_path(trip)%></h4>
-                   <p class="text-muted"><%= trip.startdate.strftime('%d %b') %> - <%= trip.enddate.strftime('%d %b %Y') %></p>
+                 </a>
+                 <div class="portfolio-caption">
+                     <h4><%= link_to trip.place.upcase, trip_path(trip)%></h4>
+                     <p class="text-muted"><%= trip.startdate.strftime('%d %b') %> - <%= trip.enddate.strftime('%d %b %Y') %></p>
 
-                   <p class="text-muted"><%= trip.about %></p>
-               </div>
-           </div>
-         <% end %>
+                     <p class="text-muted"><%= trip.about %></p>
+                 </div>
+             </div>
+           <% end %>
+         </div>
        </div>
-     </div>
-   </section>
+     </section>
 
-<%= link_to "Create New Trip", new_trip_path, class: "btn btn-default" %>
+  <div class="links-on-bottom"><%= link_to "Create New Trip", new_trip_path, class: "btn btn-info" %></div><br><br><br>
+</div>
 
