--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -1,8 +1,9 @@
-	<h1>New Announcement</h1>
 
-<div class="container">
+<div class="container fluid">
+
+<h1 class="text-muted">New Announcement</h1><br>
 
 	<%= render 'form' %>
 
-	<div class="link"><%= link_to 'Back', trip_announcements_path %></div>
+	<div class="link links-on-bottom"><%= link_to 'Back', :back %></div>
 </div>
