--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,7 +38,12 @@
 }
 
 .panel-body {
-	width: 380px;
+	width: 698px;
+}
+
+.panel-footer {
+	width: 698px;
+	background-color: white;
 }
 
 .notice {
@@ -51,16 +56,20 @@
 	width: 350px;
 }
 
+.img-size-post {
+	width: 200px;
+}
+
 .profile {
   width: 300px;
-  /*height: 200px;*/
 }
 
 .navbar {
 	padding-top: 10px;
 	background: white;
 }
-section h2.section-heading {
+
+section h2 .section-heading {
   font-size: 40px;
   margin-top: 0;
   margin-bottom: 15px;
@@ -79,6 +88,3 @@ section h2.section-heading {
   background-color: #222222;
   border-color: transparent;
 }
-
-
-
