--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -74,3 +74,25 @@
 	  height: 100%;
 	  padding: 260px;
 }
+
+.profile {
+	text-align: center;
+	font-size: 25px;
+}
+
+.portfolio-image-cropper {
+  height: 250px;
+  overflow: hidden;
+  border-radius: 5%;
+  border: lightgrey 3px;
+  object-fit: cover;
+}
+
+.portfolio-image-cropper img {
+  vertical-align: middle;
+  height: 100%;
+  min-width: 100%;
+  left: 50%;
+  position: relative;
+  transform: translateX(-50%);
+}
