--- a/app/views/announcements/_form.html.erb
+++ b/app/views/announcements/_form.html.erb
@@ -19,12 +19,12 @@
       </div>
       <%= f.text_area :content, size:"5x5", :class => "form-control", :required => true %>
       <%= f.hidden_field :user_id, value: current_user.id %>
-    </div>
+    </div><br>
 
     <% if @announcement.id %>
       <div class="actions"><%= f.submit  "Update Announcement", class: "btn btn-default"%></div>
     <% else %>
-      <div class="actions"><%= f.submit  "Add Announcement", class: "btn btn-default"%></div>
+      <div class="actions links-on-bottom"><%= f.submit  "Add Announcement", class: "btn btn-info"%></div>
     <% end %><br>
 
   <% end %>
