--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -18,12 +18,12 @@
         <strong>CONTENT</strong>
       </div>
       <%= f.text_area :content, size:"5x5", :class => "form-control", :required => true %>
-    </div>
+    </div><br>
 
     <% if @comment.id %>
-      <div class="actions"><%= f.submit  "Update Comment", class: "btn btn-default"%></div>
+      <div class="actions links-on-bottom"><%= f.submit  "Update Comment", class: "btn btn-default"%></div>
     <% else %>
-      <div class="actions"><%= f.submit  "Add Comment", class: "btn btn-default"%></div>
+      <div class="actions links-on-bottom"><%= f.submit  "Add Comment", class: "btn btn-default"%></div>
     <% end %><br>
 
   <% end %>
