--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,9 @@
-	<h1>New Post</h1>
 
 <div class="container">
 
+	<h1 class="text-muted">New Post</h1>
+
 	<%= render 'form' %>
 
-	<div class="link"><%= link_to 'Back', trip_posts_path %></div>
+	<div class="link links-on-bottom"><%= link_to 'Back', :back %></div>
 </div>
