--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,48 +2,55 @@
 	<p id="notice"><%= notice %></p>
 
 	<% if @post.image.exists? %>
-		<%= image_tag @post.image.url, :class => 'img-responsive img-size post-show-image' %>
-	<% end %>
-	<div class="panel panel-info">
-		<div class="panel-heading">
-			<div class="panel-title pull-left"><strong><%= @post.user.name %></strong></div>
-		  <div class="panel-title pull-right"><%= @post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
-		</div>
-	  <div class="panel-body">
-	    <%= @post.content %>
-	  </div>
-	  <div class="panel-footer">
-			<span> <%= @post.likes.count %> likes </span>&nbsp;&nbsp;&nbsp;
-	  	<% if current_user.like?(@post.id) %>
-				<%= link_to "", unlike_path(@post), class: "glyphicon glyphicon-thumbs-down" %>  
-			<% else %>
-				<%= link_to "", like_path(@post), class: "glyphicon glyphicon-thumbs-up" %>  
-			<% end %>
-	  </div>
-	</div>
-
-	<%= link_to "Edit", edit_post_path(@post) %>  | 
-	<%= link_to "Delete", post_path, method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
-
-	<hr>
-
-	<h3>Comments</h3>
-
-	<% if @post.comments.length > 0 %>
-		<% @post.comments.each do |comment| %>
-			<div class="panel-heading">
-				<div class="panel-body pull-left"><%= link_to "#{comment.user.name}", edit_comment_path(comment) %>: <%= comment.content %></div>
-				<div class="panel-body pull-right">
-					<%= link_to "Edit", edit_comment_path(comment)%> |
-					<%= link_to "Delete", comment_path(comment),  method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}%>
-				</div>
-			</div><br>
-		<% end %>
-		<%= render '/comments/form' %>
-	<% else %>
-		<%= render '/comments/form', :placeholder => "Be the first one to comment" %>
+		<div class="jumbotron container-fluid" id="post" style="background-image: url(<%= @post.image.url %>)"></div>
+		<div class="container image-post-show"><%= image_tag @post.image.url, :class => 'img-responsive img-size post-image-cropper' %></div>
 	<% end %><br>
+		<div class="panel panel-info">
+			<div class="panel-heading">
+				<div class="panel-title pull-left"><strong><%= @post.user.name %></strong></div>
+			  <div class="panel-title pull-right"><%= @post.updated_at.localtime.strftime('%d %b %Y at %l:%M:%S')%></div>
+			</div>
+		  <div class="panel-body">
+		    <%= @post.content %>
+		  </div>
+		  <div class="panel-footer">
+			  <div class="panel-bottom pull-left">
+					<span> <%= @post.likes.count %> likes </span>&nbsp;&nbsp;&nbsp;
+			  	<% if current_user.like?(@post.id) %>
+						<%= link_to "", unlike_path(@post), class: "glyphicon glyphicon-thumbs-down" %>  
+					<% else %>
+						<%= link_to "", like_path(@post), class: "glyphicon glyphicon-thumbs-up" %>  
+					<% end %>
+				</div>
+				<div class="panel-bottom pull-right"> 
+					<%= link_to "", edit_post_path(@post), class: "glyphicon glyphicon-pencil" %>  | 
+					<%= link_to "", post_path, class: "glyphicon glyphicon-trash", method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
+			  </div>
+		</div><br>
+	</div>
+		
+		
+		<hr>
 
-	<%= link_to "Back", trip_path(@post.trip) %> 
-</div>
+		<h3>Comments</h3>
+
+		<% if @post.comments.length > 0 %>
+			<% @post.comments.each do |comment| %>
+				<div class="row panel comment">
+					<div class="pull-left"><%= link_to "#{comment.user.name}", edit_comment_path(comment) %>: <%= comment.content %></div>
+					<div class="pull-right">
+						<%= link_to "", edit_comment_path(comment), class: "glyphicon glyphicon-pencil" %>&nbsp; | &nbsp;
+						<%= link_to "", comment_path(comment), class: "glyphicon glyphicon-trash",  method: :delete, data: { confirm: "Are you sure you want to delete this comment?"}%>
+					</div>
+				</div><br>
+			<% end %>
+			<%= render '/comments/form' %>
+		<% else %>
+			<%= render '/comments/form', :placeholder => "Be the first one to comment" %>
+		<% end %>
+
+		<div class="links-on-bottom">
+			<%= link_to "Back", trip_path(@post.trip) %> 
+		</div><br><br>
+	</div>
 
